--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ install:
 script:
   - pytest src/test_*.py --cov=handler
   - pycodestyle src/*py --ignore=E501
--after_success:
+after_success:
   - coveralls
